Add a bootstrap container

--- a/gitprictice.html
+++ b/gitprictice.html
@@ -6,8 +6,10 @@
     <title>Initialization</title>
 </head>
 <body>
-    <div>
-        Add content in body.
+    <div class="container">
+        <div>
+            Add content in body.
+        </div>
     </div>
 </body>
 </html>
